fixed a layout issue

--- a/.themes/alex/sass/base/_theme.scss
+++ b/.themes/alex/sass/base/_theme.scss
@@ -23,7 +23,7 @@ header[role="banner"] {
 
 nav {
 	width: 162px;
-	position: absolute;
+	position: fixed;
     left: 30px;
     top: 120px;	
     z-index: 100;
